tests/src/frontend/typechecking/invalid/mutable_lambda_in_immutable2.sk
mutable class Foo(f: () -> void)

fun test(): void {
  foo = mutable Foo(() -> void);
  ffoo = freeze(foo);
  _ = ffoo.f
}
